Fix of input error on IOS
1. Fix input error on IOS devices
2. Host public profile don’t require signing
3. Google analytics implement

--- a/views/emailTemplates/review/style.css
+++ b/views/emailTemplates/review/style.css
@@ -3017,10 +3017,10 @@ select[multiple].input-lg {
   font-size: 14px;
   line-height: 1.42857143;
   border-radius: 4px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  -webkit-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
 }
 .btn:focus,
 .btn:active:focus,
